--- a/tutorial/tutorial.ipynb
+++ b/tutorial/tutorial.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# convert pytorch model to onnx format\n",
     "\n",
-    "%run export.py --weights ../weights/pytorch/yolov7_lw.pt \\\n",
+    "%run export.py --weights ../weights/yolov7_lw.pt \\\n",
     "        --grid --simplify \\\n",
     "        --topk-all 100 --iou-thres 0.65 --conf-thres 0.35 \\\n",
     "        --img-size 640 640 --max-wh 640 "
@@ -27,9 +27,9 @@
     "import onnx\n",
     "from onnx_tf.backend import prepare\n",
     "\n",
-    "onnx_model = onnx.load(\"../weights/onnx/yolov7_lw.onnx\") \n",
+    "onnx_model = onnx.load(\"weights/yolov7_lw.onnx\") \n",
     "tf_rep = prepare(onnx_model)  \n",
-    "tf_rep.export_graph(\"../weights/tutorial_result\") "
+    "tf_rep.export_graph(\"weights/result\") "
    ]
   },
   {
@@ -43,7 +43,7 @@
     "\n",
     "import tensorflow as tf\n",
     "\n",
-    "converter = tf.lite.TFLiteConverter.from_saved_model('../weights/saved/yolov7_lw')\n",
+    "converter = tf.lite.TFLiteConverter.from_saved_model('weights/yolov7_lw')\n",
     "converter.optimizations = [tf.lite.Optimize.DEFAULT]\n",
     "tflite_quant_model = converter.convert()\n",
     "with open('yolov7_lw_wq.tflite', 'wb') as w:\n",
@@ -60,7 +60,7 @@
     "# Float16 Quantization \n",
     "import tensorflow as tf\n",
     "\n",
-    "converter = tf.lite.TFLiteConverter.from_saved_model('../weights/saved/yolov7_lw')\n",
+    "converter = tf.lite.TFLiteConverter.from_saved_model('weights/yolov7_lw')\n",
     "converter.optimizations = [tf.lite.Optimize.DEFAULT]\n",
     "converter.target_spec.supported_types = [tf.float16]\n",
     "tflite_quant_model = converter.convert()\n",
@@ -91,7 +91,7 @@
     "    dataset.append(data)\n",
     "\n",
     "dataset = np.array(dataset)\n",
-    "np.save(\"../custom_dataset/images/train\", dataset)\n"
+    "np.save(\"images/custom_dataset/images/train\", dataset)\n"
    ]
   },
   {
@@ -115,7 +115,7 @@
     "raw_test_data = np.load('train.npy', allow_pickle=True)\n",
     "\n",
     "# Integer Quantization - Input/Output=float32\n",
-    "converter = tf.lite.TFLiteConverter.from_saved_model('../weights/saved/yolov7_lw')\n",
+    "converter = tf.lite.TFLiteConverter.from_saved_model('weights/yolov7_lw')\n",
     "converter.optimizations = [tf.lite.Optimize.DEFAULT]\n",
     "converter.representative_dataset = representative_dataset_gen\n",
     "tflite_quant_model = converter.convert()\n",
@@ -144,7 +144,7 @@
     "raw_test_data = np.load('train.npy', allow_pickle=True)\n",
     "\n",
     "# Full Integer Quantization - Input/Output=float32\n",
-    "converter = tf.lite.TFLiteConverter.from_saved_model('../weights/saved/yolov7_lw')\n",
+    "converter = tf.lite.TFLiteConverter.from_saved_model('weights/yolov7_lw')\n",
     "converter.optimizations = [tf.lite.Optimize.DEFAULT]\n",
     "converter.inference_input_type = tf.int8\n",
     "converter.inference_output_type = tf.int8\n",
